some css added. Background image and color changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
       <p></p>
     </header>
+    <h2 id="form-title">Please add your Character below:</h2>
     <form id="new-character-form">
       <div class="form-item">
         <label for="first_name">First Name: </label>
@@ -60,15 +61,17 @@
       </div>
       <br>
       <input type="submit" value="Save character">
+      <br>
       <div id="delete-all-items">
         <input type="submit" value="Delete All">
       </div>
 
     </form>
-    <h1>Tekken Characters</h1>
+    <h2 id="list-title">Tekken Characters</h2>
     <div id="new-character">
       <ul>
       </ul>
     </div>
+    <img class="bg" src="css/images/body-background.jpeg" alt="Oops!">
   </body>
 </html>
