--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
     <h1 id="form-title">Please add your Character below:</h1>
     <form id="new-character-form">
       <div class="form-item">
-        <label for="first_name">First Name: </label>
-        <input type="text" id="first_name">
-      </div>
-
-      <div class="form-item">
-        <label for="last_name">Last Name: </label>
-        <input type="text" id="last_name">
+        <label for="full_name">Full Name: </label>
+        <input type="text" id="full_name">
       </div>
 
       <div class="form-item">
