added checkboxes for good and evil charateristic. Only in html so far.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
           <option value="Unknown">Unknown</option>
         </select>
       </div>
+
+      <div class="form-item">
+        <label for="good">Good</label>
+        <input type="checkbox" id="good" value="good">
+
+        <label for="evil">Evil</label>
+        <input type="checkbox" id="evil" value="evil">
+      </div>
       <br>
       <input type="submit" value="Save character">
       <br>
